--- a/src/assets/css/content.css
+++ b/src/assets/css/content.css
@@ -49,14 +49,15 @@
 
 .content_project {
     position: relative;
-    margin-top: 5rem;
+    /* margin-top: 5rem; */
     justify-content: flex-start;
     font-size: 1rem;
     text-align: center;
 }
 
-@media (max-height : 700px) {
-    .page-header {
-        margin-top: 5rem;
+/* Media Queries */
+@media (max-width: 700px) {
+    .content, .content_project {
+        padding-bottom: 4rem;
     }
 }
